fixes in single and csv stundent data insertion